styles/form.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:root {
    --primary-color: lightgray;
    --secondary-color: black;
    --accent: rgb(255, 54, 54);
    --footer-clrs: rgba(255, 161, 161, 0.8);
}
body {
    font-family: 'Roboto', Arial, Helvetica, sans-serif;
    color: var(--secondary-color);
    line-height: 1.6;
    min-width: 330px;
    background: linear-gradient(to right, #000000, #000000c8);
    margin: 0 auto;
    min-height: 100vh;
    min-width: 620px;
}

h1 {
    text-align: center;
    color: white;
    padding: 2rem 0;
    font-weight: 300;
}

.required {
    color: var(--accent);
    padding-left: 0.3rem;
    font-weight: 900;
}

.miniInstructions {
    font-style: italic;
    font-size: 1rem;
    color: rgb(192, 189, 255);
}

form {
    padding: 0 2rem;
    border-radius: 20px;
    box-shadow: 0 2px 4px rgba(125, 125, 125, 0.504);
    max-width: 75%;
    margin: 0 auto;
    color: white;
    border: 1px solid rgb(0, 0, 0);
    background: rgba(255, 255, 255, 0.1);
    min-height: 80vh;
}
fieldset {
    margin: 2rem 0;
    padding: 1rem 1rem 2rem 1rem;
    border-radius: 6px;
    border: 1px solid rgba(255,255,255,0.15);
}
legend {
    font-weight: 400;
    color: var(--accent);
    font-size: 1.5rem;
    letter-spacing: 1.5px;
    display: block;
}

label, .featuresHeader {
    display: block;
    font-weight: 400;
    font-size: 1.2rem;
    color: white;
    padding-top: 1rem;
}
.check {
    font-size: 1.1rem;
    padding: 0.5rem 3px;
    width: fit-content;
}
input[type="checkbox"] {
    margin-right: 0.5rem;
    transform: scale(1.4);
    accent-color: var(--accent);
}

input[type="text"],
input[type="email"],
input[type="tel"],
input[type="url"],
select,
input[type="date"],
input[type="number"] {
    background-color: #eee;
    display: block;
    border: 1px solid #999;
    border-radius: 6px;
    padding: 0.75rem;
    color: black;
    width: 100%;
    max-width: 400px;
    appearance: none;
    font-size: 1rem;
    font-weight: 400;
}

#rateHead {
    display: block;
    padding-top: 2rem;
    font-size: 1.2rem;
    color: white;
    font-weight: 400;
}
input[type="radio"] {
    display: none;
}
.stars {
    display: flex;
    flex-direction: row-reverse;
    justify-content: left;
}
.stars label {
    color: red;
    width: 30px;
    height: 10px;
    font-size: 2rem;
    display: flex;
    align-items: center;
    padding-right: 3rem;
    padding: 1rem 0;
}
.stars label:hover {
    color: rgb(255, 54, 54, 0.4);
}
.stars label::before {
    content: "\2606";
}
.stars input:checked~label::before {
    content: "\2605";
}

textarea {
    background: rgba(255,255,255,0.15);
    color: #fff;
    border: 1.5px solid rgba(255, 255, 255, 0.05);
    display: block;
    border-radius: 6px;
    padding: 0.75rem;
    width: 100%;
    min-height: 10rem;
    font-size: 1.2rem;
    font-weight: 400;
    margin-top: 1rem;
}

input[type="submit"] {
    border: none;
    background: linear-gradient(red, darkred);
    color: white;
    border-radius: 6px;
    padding: 0.75rem;
    width: 363px;
    margin: 0 1rem 2rem 1rem;
    max-width: 400px;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.479);
    font-size: 1.2rem;
    transition: 0.3s ease;
    font-weight: 500;
}

input[type="submit"]:hover,
input[type="radio"]:hover,
input[type="checkbox"]:hover, .submitAnotherReview:hover {
    cursor: pointer;
    transform: scale(1.05);
    background-color: red;
    box-shadow: 1px 4px 12px rgba(255, 0, 0, 0.773);
    font-weight: 600;
}

.thankYouMessage {
    text-align: center;
    color: white;
    padding: 4rem 2rem;
    font-size: 1.2rem;
    height: 89vh;
    padding-top: 35vh;
}

.submitAnotherReview {
    display: inline-block;
    background-color: red;
    color: white;
    text-decoration: none;
    padding: 0.5rem 0.75rem;
    margin-top: 1rem;
    border-radius: 6px;
    font-size: 1.2rem;
    font-weight: 400;
    border: none;
    transition: 0.3s ease;
}
.submitAnotherReview a {
    color: white;
    text-decoration: none;
}
.submitAnotherReview:hover {
    background-color: red;
    box-shadow: 1px 4px 12px rgba(255, 0, 0, 0.773);
}

.highlight {
    color: white;
    padding: 0 0.3rem;
    font-size: 2rem;
    border-radius: 4px;
    color: var(--accent);
}

/* FOOTER */
footer {
    color: white;
    text-align: center;
    padding: 1.2rem 1.5rem 2rem 1.5rem;
    font-size: 1rem;
    margin-top: 2rem;
    letter-spacing: 0.5px;
}

footer p {
    margin: 0.2rem 0;
}

#lastModified, #currentyear {
    color: var(--footer-clrs);
    font-size: 0.95rem;
    margin-top: 0.3rem;
}

@media (min-width: 620px) {
    form {
        max-width: 50%;
        min-width: 620px;
    }
    input[type="submit"] {
        width: 100%;
        margin: 0 1rem 2rem 1rem;
    }
}

